--- a/community.css
+++ b/community.css
@@ -107,9 +107,7 @@ video {
   width: 200px;
   height: 200px;
 }
-.card {
-  overflow: auto;
-}
+
 .card-title {
   text-align: center;
   font-size: 50px;
@@ -134,4 +132,7 @@ time {
   font-family: Georgia, "Times New Roman", Times, serif;
   font-size: medium;
   color: rgb(5, 133, 169);
+}
+section {
+  overflow: auto;
 }
