--- a/mobileCommunity.css
+++ b/mobileCommunity.css
@@ -1,10 +1,10 @@
 @media screen and (max-width: 720px) {
   aside {
-    position: fixed;
+    /* position: fixed;
     margin: 0;
     bottom: 0px;
     left: 0;
-    right: 0;
+    right: 0; */
     height: initial;
     /* height: 25%; */
   }
