--- a/quiz.css
+++ b/quiz.css
@@ -54,6 +54,7 @@ header {
   width: 200px;
   height: 200px;
   left: 10%;
+  padding: 5px;
   border-radius: 50%;
   text-align: center;
   text-shadow: 5px 5px 5px rgb(234, 234, 198);
