--- a/mobileCommunity.css
+++ b/mobileCommunity.css
@@ -1,24 +1,23 @@
 @media screen and (max-width: 720px) {
   aside {
-    position: relative;
-    bottom: 20%;
+    /* position: relative;
+    bottom: 20%; */
     height: 10vh;
   }
 
   aside img {
-    left: 5%;
+    left: 0;
     width: 60px;
     height: 60px;
   }
   aside a {
-    right: 5%;
+    right: 0;
     padding: 0;
   }
   aside span {
-    display: block;
-    margin: 0;
+    /* margin: 0;
     padding: 0;
-    margin-top: 5%;
+    margin-top: 5%; */
   }
   footer {
     padding: 5px;
