--- a/mobileCommunity.css
+++ b/mobileCommunity.css
@@ -15,9 +15,8 @@
     padding: 0;
   }
   aside span {
-    /* margin: 0;
+    margin: 0;
     padding: 0;
-    margin-top: 5%; */
   }
   footer {
     padding: 5px;
