--- a/mobileCommunity.css
+++ b/mobileCommunity.css
@@ -1,7 +1,7 @@
 @media screen and (max-width: 720px) {
   aside {
-    /* position: relative;
-    bottom: 20%; */
+    position: relative;
+    bottom: 20%;
     height: 12vh;
   }
 
