--- a/mobileCommunity.css
+++ b/mobileCommunity.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 720px) {
   aside {
-    height: 16vh;
+    height: 18vh;
   }
 
   aside img {
@@ -14,7 +14,7 @@
   }
   aside span {
     position: relative;
-    margin: 0;
+    margin: 5px;
     padding: 3px;
   }
   footer {
