--- a/community.css
+++ b/community.css
@@ -113,6 +113,7 @@ video {
 .card-title {
   text-align: center;
   font-size: 50px;
+  text-transform: capitalize;
 }
 #scor {
   position: relative;
