--- a/home.css
+++ b/home.css
@@ -94,6 +94,14 @@ header {
     opacity: 0.7;
   }
 }
+@keyframes aboutProject {
+  0% {
+    margin-right: -55%;
+  }
+  100% {
+    margin-right: 5%;
+  }
+}
 #infoDiv {
   background-color: hsla(0, 0%, 99%, 0.9);
   margin: 17% auto;
@@ -114,12 +122,12 @@ video {
   width: 50%;
   float: left;
   margin: 5% 0 5% 5%;
+  opacity: 0;
 }
 .right {
   width: 35%;
   float: right;
-  margin: 5% 0;
-  margin-right: 5%;
+  margin: 5%;
 }
 
 #desktop div {
