--- a/mobileQuestion.css
+++ b/mobileQuestion.css
@@ -10,7 +10,11 @@
     width: 20px;
   }
   form h1 {
-    font-size: 20px;
+    font-size: 16px;
     padding-bottom: 5px;
+  }
+
+  .alert {
+    width: 90%;
   }
 }
